# Veritas_core

./: .gitignore  CONTRIBUTING.md  FULL_PROJECT_CONTEXT.md  LICENSE  MANIFEST.md  MANIFESTO.md  PROJECT_MISSION.md  PROJECT_SNAPSHOT.txt  README.md  VITALIS_DEV_AUDIT.txt  app.py  bootstrap.sh  brain.py  check_and_compile.sh  concept_graph.py  contact.md  fsi_main.py  hf_upload.py  high_precision.py  memory_engine.py  memory_stream.jsonl  organism_main.py  pyproject.toml  requirements.txt  run_vitalis.py  science_reasoner.py  services.py  setup.py.bak  train_self.py  vitalis_shadow
.github/: FUNDING.yml
core/: brain.py  ledger.py  memory_rotator.py  template_manager.py
plugins/: self_audit_tool.py
scripts/: check_install.py
src/core/: memory_engine.py  transformer_wrapper.py
src/energy/: free_energy.py
src/psychology/: self_model.py
templates/: ripple.html
ui/: app.py
ui/templates/: index.html
vitalis/: cli.py
vitalis/src/brain/: brain_interface.py  rnn_core.py
vitalis/src/core/: heartbeat_loop.py
vitalis_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
